<resources>
    <string name="button_text_load_data">load data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="switch_players">switch players</string>
    <string name="higher">Higher</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="fppg">FPPG</string>
    <string name="fppg_is">FPPG is</string>
    <string name="higher_or_lower">is HIGHER or LOWER than</string>
    <string name="score">YOUR SCORE</string>
    <string name="play_again">Play Again</string>
    <string name="game_over">10 CORRECT - GAME OVER</string>
    <string name="zero">0</string>
    <string name="app_name">FPPG Game</string>
    <string name="fppg_higher_or_lower">FPPG Higher or Lower</string>
    <string name="click_to_start">CLICK TO START</string>
    <string name="no_internet">No Internet Connection</string>
</resources>
